k8s/00-namespace-config.yaml
---
# Namespace для приложения
apiVersion: v1
kind: Namespace
metadata:
  name: warden
